2004-07-16  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/channels/FileChannel/manyopen.java:
	Fixed off-by-one error in cleanup.

2004-07-16  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/beans/EventHandler/check14.java,
	gnu/testlet/java/nio/Buffer/PlainBufferTest.java,
	gnu/testlet/java/nio/Buffer/WrappedWithOffsetBufferTest.java,
	gnu/testlet/java/util/logging/Logger/getLogger.java:
	Fixed for native compilation with gcj CVS HEAD.

2004-07-15  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/sql/Timestamp/TimestampTest.java: New toString()
	and equals() tests. 

2004-07-14  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/awt/image/Kernel/check.java (test): New test.

2004-07-13  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/beans/EventHandler/check14.java (test): New test.

2004-07-08  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/nio/channels/FileChannel/manyopen.java :
	Don't call the GC after each iteration.  If the VM under test
	pays attention, it just makes the test SLOW.

2004-07-04  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/awt/Choice/getSelected.java: New test.

2004-07-04  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/beans/Expression/check.java: Add extra debug.

2004-06-29  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/util/GregorianCalendar/conversion.java: New file

2004-06-28  Anthony Green  <green@redhat.com>

	* gnu/testlet/java/util/zip/ZipFile/NoEntryTest.java: Fix comment.

2004-06-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/security.java: Allow RuntimePermission
	shutdownhook check. There must be at least one File root.

2004-06-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FileReader/jdk11.java: Don't depend on the
	choices file being present.

2004-06-24  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/beans/Expression/check.java: New test.

2004-06-23  Max Gilead  <gilead@yellowhedgehog.com>
