@@ -1,5 +1,4 @@
 // Tags: JDK1.4
-// Uses: ByteBufferFactory
 
 // Copyright (C) 2004 Max Gilead <gilead@yellowhedgehog.com>
 
